# needle-rs

./: Cargo.toml  README.md
.github/workflows/: rust.yml
examples/: aes.rs  mixed.rs  simple.rs  walkthrough.rs  xor.rs
src/: cypher.rs  err.rs  lib.rs  win.rs
