[package]
name = "needle"
version = "0.1.0"
edition = "2021"

[features]
default = ["windows"]
docs = []
windows = [ "dep:windows",
            "windows/Foundation_Collections",
            "windows/Win32_Foundation",
            "windows/Win32_System_Diagnostics_Debug",
            "windows/Win32_System_Diagnostics_ToolHelp",
            "windows/Win32_System_Memory",
            "windows/Win32_System_Threading",
            "windows/Win32_Security" ]

[dependencies]
cfg-if = "1.0.0"
windows = { version = "0.58.0", optional = true }
