[package]
name = "needle"
version = "1.0.0"
edition = "2021"

[features]
windows = [ "dep:windows",
            "windows/Foundation_Collections",
            "windows/Win32_Foundation",
            "windows/Win32_System_Diagnostics_Debug",
            "windows/Win32_System_Diagnostics_ToolHelp",
            "windows/Win32_System_Memory",
            "windows/Win32_System_Threading",
            "windows/Win32_Security" ]
aes = ["dep:aes-gcm"]
default = ["aes"]

[dependencies]
cfg-if = "1.0.0"
windows = { version = "0.58.0", optional = true }
aes-gcm = { version = "0.10.3", optional = true }
cyphres = { git = "https://github.com/Swiiz/cyphres-rs.git" }